--- a/todo
+++ b/todo
@@ -7,3 +7,7 @@ blast death knight, kill him, and then his corpse will be thrown. blast undying 
 finish reiver monster
 
 make tomed altfire mode for meteor staff
+
+skull wizards start floating after teleporting back in; present in uhexen2 progs as well (and assumably vanilla)
+
+make bone ball turret aim at the floor if it hit the ceiling
