--- a/todo
+++ b/todo
@@ -11,4 +11,6 @@ make bone ball turret aim at the floor if it hit the ceiling
 
 make axe altfire useful + unique
 
-make sure everything in portals is working
+think of better altfire for magic missiles - current is redundant
+
+import ash statue death system & skull wizard resurrection system
