--- a/todo
+++ b/todo
@@ -13,4 +13,4 @@ make axe altfire useful + unique
 
 think of better altfire for magic missiles - current is redundant
 
-import ash statue death system & skull wizard resurrection system
+port ash statue system & respawning tweaks to portals branch
