--- a/todo
+++ b/todo
@@ -7,3 +7,7 @@ skull wizards start floating after teleporting back in; present in uhexen2 progs
 summoned minions dont attack enemies in coop
 
 config flags dont work right in coop
+
+move config flags from impulses to menu system
+
+make sickle altfire summon faraway minions to you if theres no corpse to raise
