--- a/todo
+++ b/todo
@@ -8,4 +8,4 @@ summoned minions dont attack enemies in coop
 
 config flags dont work right in coop
 
-move config flags from impulses to menu system
+add golem standing statue pose from hexen 2 beta
